Reconfigured ML service, Python setup, PostgreSQL PATH fix, service integration updates